add git commit in module info
